# ft-rag-against-the-machine

./: .gitignore  Makefile  pyproject.toml  subject.md
data/index/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/: __main__.py  __oldmain__.py  answer_generator.py  evaluator.py  models.py  rag_models.py  source_loader.py
src/data/: dataset.py  document.py  markdown_dataset.py  python_dataset.py
src/index/: bm25_index.py  bm25_retriever.py  index.py
